--- a/Website/css/twitt.css
+++ b/Website/css/twitt.css
@@ -1,7 +1,3 @@
-
-
-
-
 .TopRight{
     float: right;
     text-align: right; 
@@ -115,7 +111,7 @@ input[type=text]
     margin-right: auto;
 }
 .doubleGraphCont{
-    width: 49%;
+    width: 50%;
     clear: none;
 }
 
@@ -126,24 +122,40 @@ input[type=text]
     float: right;
 }
 .textSqueeze{
-    text-align: left;
-    clear:both;
-    max-width: 70%;
+    text-align: center;
+  
+    max-width: 80%;
     margin-left: auto;
     margin-right: auto;
     padding-top: 40px;
     padding-bottom: 15px;
+    font-size: 17px;
    
 }
-.firstGraph{
-    float:right;
-    width: 49%;
-    
+.textSqueeze2{
+    text-align: left;
+    max-width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 490px;
+    padding-bottom: 15px;
+    font-size: 17px;
+ 
+   
 }
 .firstRowText{
-    padding-left: 100px;
-    float:left;
-    width: 49%;
-    padding-top: 50px;
-    text-align: left;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 60%;
+    text-align: center;
+    font-size: 18px;
+}
+
+    
+
+.thirdRow{
+    float: both;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
