Updated CSS to include background img

--- a/Website/css/twitt.css
+++ b/Website/css/twitt.css
@@ -182,7 +182,7 @@ body, html {
 }
 
 .parallax { 
-    background-image: url("https://pp.vk.me/c604330/v604330187/455da/hxzFr-BuWUY.jpg");
+    background-image: url("https://cdn.rawgit.com/rachaelecole/WeatherTwitterProject/a6b688fe/Website/img/background%20img.jpg");
     height: 100%; 
     background-attachment: fixed;
     background-position: center;
