--- a/Website/css/twitt.css
+++ b/Website/css/twitt.css
@@ -218,3 +218,12 @@ p {
 	font-weight: 400;
 	line-height: 20px;
 }
+
+p2 {
+	font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
+	font-size: 18px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: bold;
+	line-height: 20px;
+}
